[gd_scene load_steps=7 format=2]

[ext_resource path="res://guis/hud.gd" type="Script" id=1]
[ext_resource path="res://players/player_1.tres" type="Resource" id=2]
[ext_resource path="res://guis/Inventory.tscn" type="PackedScene" id=3]

[sub_resource type="StyleBoxLine" id=3]
content_margin_left = 10.0
content_margin_right = 10.0
content_margin_top = 10.0
content_margin_bottom = 10.0
color = Color( 1, 0.988235, 0.988235, 1 )
thickness = 2

[sub_resource type="StyleBoxLine" id=4]
content_margin_left = 10.0
content_margin_right = 10.0
content_margin_top = 10.0
content_margin_bottom = 10.0
color = Color( 0.0196078, 0.0196078, 0.0196078, 1 )
thickness = 2

[sub_resource type="StyleBoxFlat" id=2]
content_margin_left = 20.0
content_margin_right = 10.0
content_margin_top = 20.0
content_margin_bottom = 10.0
bg_color = Color( 0, 0, 0, 0.247059 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="HUD" type="CanvasLayer"]
layer = 3
script = ExtResource( 1 )
__meta__ = {
"_edit_vertical_guides_": [ 360.0 ]
}
player = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 404.0
margin_bottom = 350.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 702.0
margin_bottom = 490.0
custom_constants/separation = 14

[node name="Detail" type="MarginContainer" parent="VBoxContainer/HBoxContainer"]
margin_right = 360.0
margin_bottom = 490.0
rect_min_size = Vector2( 360, 350 )
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 30

[node name="Panel" type="Panel" parent="VBoxContainer/HBoxContainer/Detail"]
margin_left = 10.0
margin_top = 10.0
margin_right = 360.0
margin_bottom = 460.0

[node name="TabContainer" type="TabContainer" parent="VBoxContainer/HBoxContainer/Detail"]
margin_left = 10.0
margin_top = 10.0
margin_right = 360.0
margin_bottom = 460.0
rect_min_size = Vector2( 350, 450 )
custom_constants/side_margin = 0
custom_styles/tab_fg = SubResource( 3 )
custom_styles/tab_disabled = SubResource( 4 )
custom_styles/tab_bg = SubResource( 4 )
custom_styles/panel = SubResource( 2 )
tab_align = 0

[node name="Inventory" type="ScrollContainer" parent="VBoxContainer/HBoxContainer/Detail/TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 54.0
margin_right = -10.0
margin_bottom = -10.0
follow_focus = true

[node name="Inventory" parent="VBoxContainer/HBoxContainer/Detail/TabContainer/Inventory" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 141.0
margin_bottom = 54.0

[node name="Status" type="MarginContainer" parent="VBoxContainer/HBoxContainer/Detail/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
custom_constants/margin_right = 10
custom_constants/margin_top = 20
custom_constants/margin_left = 10

[node name="Status" type="ScrollContainer" parent="VBoxContainer/HBoxContainer/Detail/TabContainer/Status"]
visible = false
margin_left = 10.0
margin_top = 20.0
margin_right = 332.0
margin_bottom = 414.0
follow_focus = true

[node name="Setting" type="MarginContainer" parent="VBoxContainer/HBoxContainer/Detail/TabContainer"]
visible = false
margin_left = 14.0
margin_top = 52.0
margin_right = 336.0
margin_bottom = 446.0
custom_constants/margin_right = 10
custom_constants/margin_top = 20
custom_constants/margin_left = 10

[node name="Status" type="ScrollContainer" parent="VBoxContainer/HBoxContainer/Detail/TabContainer/Setting"]
visible = false
margin_left = 10.0
margin_top = 20.0
margin_right = 312.0
margin_bottom = 394.0
follow_focus = true

[node name="Description" type="Control" parent="VBoxContainer/HBoxContainer"]
margin_left = 374.0
margin_right = 574.0
margin_bottom = 490.0
rect_min_size = Vector2( 200, 0 )

[node name="Panel" type="Panel" parent="VBoxContainer/HBoxContainer/Description"]
margin_left = 10.0
margin_top = 10.0
margin_right = 208.0
margin_bottom = 789.0
rect_min_size = Vector2( 198, 450 )

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/Description/Panel"]
margin_left = 10.0
margin_top = 10.0
margin_right = 175.0
margin_bottom = 425.0
rect_min_size = Vector2( 50, 0 )
custom_constants/separation = 5

[node name="Item" type="TextureRect" parent="VBoxContainer/HBoxContainer/Description/Panel/VBoxContainer"]
margin_right = 175.0
margin_bottom = 180.0
rect_min_size = Vector2( 170, 180 )
stretch_mode = 5

[node name="Item_name" type="Label" parent="VBoxContainer/HBoxContainer/Description/Panel/VBoxContainer"]
margin_top = 185.0
margin_right = 175.0
margin_bottom = 215.0
rect_min_size = Vector2( 175, 30 )
text = "Item Name"
autowrap = true
uppercase = true

[node name="item_type" type="Label" parent="VBoxContainer/HBoxContainer/Description/Panel/VBoxContainer"]
margin_top = 220.0
margin_right = 175.0
margin_bottom = 250.0
rect_min_size = Vector2( 175, 30 )
text = "Item_type"
autowrap = true

[node name="item_quantity" type="Label" parent="VBoxContainer/HBoxContainer/Description/Panel/VBoxContainer"]
margin_top = 255.0
margin_right = 175.0
margin_bottom = 285.0
rect_min_size = Vector2( 175, 30 )
text = "Item_Quantity"
autowrap = true

[node name="Description" type="Label" parent="VBoxContainer/HBoxContainer/Description/Panel/VBoxContainer"]
margin_top = 290.0
margin_right = 175.0
margin_bottom = 425.0
rect_min_size = Vector2( 175, 135 )
text = "item DescriptionitemDescriptionitem DescriptionitemDescriptionitemDescriptionitem Descriptionitem Description"
autowrap = true
clip_text = true

[node name="Equip" type="Control" parent="VBoxContainer/HBoxContainer"]
margin_left = 588.0
margin_right = 638.0
margin_bottom = 490.0
rect_min_size = Vector2( 50, 310 )

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/Equip"]
margin_top = 5.0
margin_right = 70.0
margin_bottom = 252.0
rect_min_size = Vector2( 70, 0 )

[node name="Weapon" type="MarginContainer" parent="VBoxContainer/HBoxContainer/Equip/VBoxContainer"]
margin_right = 70.0
margin_bottom = 60.0
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 15
custom_constants/margin_bottom = 5

[node name="Item1" type="Panel" parent="VBoxContainer/HBoxContainer/Equip/VBoxContainer/Weapon"]
margin_left = 15.0
margin_top = 5.0
margin_right = 65.0
margin_bottom = 55.0
rect_min_size = Vector2( 50, 50 )

[node name="Weapon" type="TextureButton" parent="VBoxContainer/HBoxContainer/Equip/VBoxContainer/Weapon/Item1"]
margin_left = 5.0
margin_top = 5.0
margin_right = 44.0
margin_bottom = 43.0
rect_min_size = Vector2( 35, 35 )
size_flags_horizontal = 5
size_flags_vertical = 5
size_flags_stretch_ratio = 0.0
shortcut_in_tooltip = false

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/Equip/VBoxContainer/Weapon/Item1"]
margin_right = 40.0
margin_bottom = 14.0

[node name="Top" type="MarginContainer" parent="VBoxContainer/HBoxContainer/Equip/VBoxContainer"]
margin_top = 64.0
margin_right = 70.0
margin_bottom = 124.0
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 15
custom_constants/margin_bottom = 5

[node name="Item1" type="Panel" parent="VBoxContainer/HBoxContainer/Equip/VBoxContainer/Top"]
margin_left = 15.0
margin_top = 5.0
margin_right = 65.0
margin_bottom = 55.0
rect_min_size = Vector2( 50, 50 )

[node name="Top" type="TextureButton" parent="VBoxContainer/HBoxContainer/Equip/VBoxContainer/Top/Item1"]
margin_left = 5.0
margin_top = 5.0
margin_right = 44.0
margin_bottom = 43.0
rect_min_size = Vector2( 35, 35 )
size_flags_horizontal = 5
size_flags_vertical = 5
size_flags_stretch_ratio = 0.0
shortcut_in_tooltip = false

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/Equip/VBoxContainer/Top/Item1"]
margin_right = 40.0
margin_bottom = 14.0

[node name="Bottom" type="MarginContainer" parent="VBoxContainer/HBoxContainer/Equip/VBoxContainer"]
margin_top = 128.0
margin_right = 70.0
margin_bottom = 188.0
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 15
custom_constants/margin_bottom = 5

[node name="Item1" type="Panel" parent="VBoxContainer/HBoxContainer/Equip/VBoxContainer/Bottom"]
margin_left = 15.0
margin_top = 5.0
margin_right = 65.0
margin_bottom = 55.0
rect_min_size = Vector2( 50, 50 )

[node name="Bottom" type="TextureButton" parent="VBoxContainer/HBoxContainer/Equip/VBoxContainer/Bottom/Item1"]
margin_left = 5.0
margin_top = 5.0
margin_right = 44.0
margin_bottom = 43.0
rect_min_size = Vector2( 35, 35 )
size_flags_horizontal = 5
size_flags_vertical = 5
size_flags_stretch_ratio = 0.0
shortcut_in_tooltip = false

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/Equip/VBoxContainer/Bottom/Item1"]
margin_right = 40.0
margin_bottom = 14.0

[node name="Ring" type="MarginContainer" parent="VBoxContainer/HBoxContainer/Equip/VBoxContainer"]
margin_top = 192.0
margin_right = 70.0
margin_bottom = 252.0
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 15
custom_constants/margin_bottom = 5

[node name="Item1" type="Panel" parent="VBoxContainer/HBoxContainer/Equip/VBoxContainer/Ring"]
margin_left = 15.0
margin_top = 5.0
margin_right = 65.0
margin_bottom = 55.0
rect_min_size = Vector2( 50, 50 )

[node name="Ring" type="TextureButton" parent="VBoxContainer/HBoxContainer/Equip/VBoxContainer/Ring/Item1"]
margin_left = 5.0
margin_top = 5.0
margin_right = 44.0
margin_bottom = 43.0
rect_min_size = Vector2( 35, 35 )
size_flags_horizontal = 5
size_flags_vertical = 5
size_flags_stretch_ratio = 0.0
shortcut_in_tooltip = false

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/Equip/VBoxContainer/Ring/Item1"]
margin_right = 40.0
margin_bottom = 14.0

[node name="Bracelet" type="MarginContainer" parent="VBoxContainer/HBoxContainer/Equip/VBoxContainer"]
margin_top = 256.0
margin_right = 70.0
margin_bottom = 316.0
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 15
custom_constants/margin_bottom = 5

[node name="Item1" type="Panel" parent="VBoxContainer/HBoxContainer/Equip/VBoxContainer/Bracelet"]
margin_left = 15.0
margin_top = 5.0
margin_right = 65.0
margin_bottom = 55.0
rect_min_size = Vector2( 50, 50 )

[node name="Bracelet" type="TextureButton" parent="VBoxContainer/HBoxContainer/Equip/VBoxContainer/Bracelet/Item1"]
margin_left = 5.0
margin_top = 5.0
margin_right = 44.0
margin_bottom = 43.0
rect_min_size = Vector2( 35, 35 )
size_flags_horizontal = 5
size_flags_vertical = 5
size_flags_stretch_ratio = 0.0
shortcut_in_tooltip = false

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/Equip/VBoxContainer/Bracelet/Item1"]
margin_right = 40.0
margin_bottom = 14.0

[node name="Quick_use" type="Control" parent="VBoxContainer/HBoxContainer"]
margin_left = 652.0
margin_right = 702.0
margin_bottom = 490.0
rect_min_size = Vector2( 50, 310 )

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/Quick_use"]
margin_left = 10.0
margin_top = 5.0
margin_right = 70.0
margin_bottom = 252.0

[node name="Menu" type="MarginContainer" parent="VBoxContainer/HBoxContainer/Quick_use/VBoxContainer"]
margin_right = 70.0
margin_bottom = 60.0
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 10
custom_constants/margin_bottom = 5

[node name="Menu" type="Button" parent="VBoxContainer/HBoxContainer/Quick_use/VBoxContainer/Menu"]
margin_left = 10.0
margin_top = 5.0
margin_right = 65.0
margin_bottom = 55.0
rect_min_size = Vector2( 50, 50 )
focus_mode = 0
enabled_focus_mode = 0
text = "Menu"

[node name="Item2" type="MarginContainer" parent="VBoxContainer/HBoxContainer/Quick_use/VBoxContainer"]
margin_top = 64.0
margin_right = 70.0
margin_bottom = 124.0
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 15
custom_constants/margin_bottom = 5

[node name="Item1" type="Panel" parent="VBoxContainer/HBoxContainer/Quick_use/VBoxContainer/Item2"]
margin_left = 15.0
margin_top = 5.0
margin_right = 65.0
margin_bottom = 55.0
rect_min_size = Vector2( 50, 50 )

[node name="TextureRect" type="TextureButton" parent="VBoxContainer/HBoxContainer/Quick_use/VBoxContainer/Item2/Item1"]
margin_left = 5.0
margin_top = 5.0
margin_right = 44.0
margin_bottom = 43.0
rect_min_size = Vector2( 35, 35 )
size_flags_horizontal = 5
size_flags_vertical = 5
size_flags_stretch_ratio = 0.0
shortcut_in_tooltip = false

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/Quick_use/VBoxContainer/Item2/Item1"]
margin_right = 40.0
margin_bottom = 14.0

[node name="Item3" type="MarginContainer" parent="VBoxContainer/HBoxContainer/Quick_use/VBoxContainer"]
margin_top = 128.0
margin_right = 70.0
margin_bottom = 188.0
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 15
custom_constants/margin_bottom = 5

[node name="Item1" type="Panel" parent="VBoxContainer/HBoxContainer/Quick_use/VBoxContainer/Item3"]
margin_left = 15.0
margin_top = 5.0
margin_right = 65.0
margin_bottom = 55.0
rect_min_size = Vector2( 50, 50 )

[node name="TextureRect" type="TextureButton" parent="VBoxContainer/HBoxContainer/Quick_use/VBoxContainer/Item3/Item1"]
margin_left = 5.0
margin_top = 5.0
margin_right = 44.0
margin_bottom = 43.0
rect_min_size = Vector2( 35, 35 )
size_flags_horizontal = 5
size_flags_vertical = 5
size_flags_stretch_ratio = 0.0
shortcut_in_tooltip = false

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/Quick_use/VBoxContainer/Item3/Item1"]
margin_right = 40.0
margin_bottom = 14.0

[node name="Item4" type="MarginContainer" parent="VBoxContainer/HBoxContainer/Quick_use/VBoxContainer"]
margin_top = 192.0
margin_right = 70.0
margin_bottom = 252.0
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 15
custom_constants/margin_bottom = 5

[node name="Item1" type="Panel" parent="VBoxContainer/HBoxContainer/Quick_use/VBoxContainer/Item4"]
margin_left = 15.0
margin_top = 5.0
margin_right = 65.0
margin_bottom = 55.0
rect_min_size = Vector2( 50, 50 )

[node name="TextureRect" type="TextureButton" parent="VBoxContainer/HBoxContainer/Quick_use/VBoxContainer/Item4/Item1"]
margin_left = 5.0
margin_top = 5.0
margin_right = 44.0
margin_bottom = 43.0
rect_min_size = Vector2( 35, 35 )
size_flags_horizontal = 5
size_flags_vertical = 5
size_flags_stretch_ratio = 0.0
shortcut_in_tooltip = false

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/Quick_use/VBoxContainer/Item4/Item1"]
margin_right = 40.0
margin_bottom = 14.0

[node name="Item5" type="MarginContainer" parent="VBoxContainer/HBoxContainer/Quick_use/VBoxContainer"]
margin_top = 256.0
margin_right = 70.0
margin_bottom = 316.0
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 15
custom_constants/margin_bottom = 5

[node name="Item1" type="Panel" parent="VBoxContainer/HBoxContainer/Quick_use/VBoxContainer/Item5"]
margin_left = 15.0
margin_top = 5.0
margin_right = 65.0
margin_bottom = 55.0
rect_min_size = Vector2( 50, 50 )

[node name="TextureRect" type="TextureButton" parent="VBoxContainer/HBoxContainer/Quick_use/VBoxContainer/Item5/Item1"]
margin_left = 5.0
margin_top = 5.0
margin_right = 44.0
margin_bottom = 43.0
rect_min_size = Vector2( 35, 35 )
size_flags_horizontal = 5
size_flags_vertical = 5
size_flags_stretch_ratio = 0.0
shortcut_in_tooltip = false

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/Quick_use/VBoxContainer/Item5/Item1"]
margin_right = 40.0
margin_bottom = 14.0

[connection signal="pressed" from="VBoxContainer/HBoxContainer/Equip/VBoxContainer/Weapon/Item1/Weapon" to="." method="_on_quickuse_4_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Equip/VBoxContainer/Top/Item1/Top" to="." method="_on_quickuse_1_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Equip/VBoxContainer/Bottom/Item1/Bottom" to="." method="_on_quickuse_2_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Equip/VBoxContainer/Ring/Item1/Ring" to="." method="_on_quickuse_3_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Equip/VBoxContainer/Bracelet/Item1/Bracelet" to="." method="_on_quickuse_3_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Quick_use/VBoxContainer/Menu/Menu" to="." method="_on_Menu_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Quick_use/VBoxContainer/Item2/Item1/TextureRect" to="." method="_on_quickuse_1_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Quick_use/VBoxContainer/Item3/Item1/TextureRect" to="." method="_on_quickuse_2_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Quick_use/VBoxContainer/Item4/Item1/TextureRect" to="." method="_on_quickuse_3_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Quick_use/VBoxContainer/Item5/Item1/TextureRect" to="." method="_on_quickuse_4_pressed"]
